# equivalence

./: .gitignore  .hgignore  .travis.yml  CHANGES.md  CHANGES.txt  LICENSE  README.md  Setup.hs  cabal.haskell-ci  equivalence.cabal  union-find-stt.cabal
.github/workflows/: haskell-ci.yml
src/Data/Equivalence/: Monad.hs  STT.hs
src/Data/UnionFind/: Monad.hs  STT.hs
testsuite/tests/: Data_Test.hs
testsuite/tests/Data/Equivalence/: Monad_Test.hs
