Name:            equivalence
Version:         0.1
License:         BSD3
License-File:    LICENSE
Author:          Patrick Bahr <paba@diku.dk>
Maintainer:      Patrick Bahr <paba@diku.dk>
Synopsis:        Maintaining an equivalence relation implemented as union-find using STT.
Description:	 
Category:        Algorithms, Data
Stability:       provisional
Build-Type:      Simple
Cabal-Version:   >= 1.6

Library
  Build-Depends:
    base >= 4 && < 5, containers, STMonadTrans >= 0.2, mtl
  Exposed-Modules:
    Data.Equivalence.STT,
    Data.Equivalence.Monad
  Hs-Source-Dirs: src

