Cabal-Version:   1.18
Name:            equivalence
Version:         0.4.1.1
License:         BSD3
License-File:    LICENSE
Author:          Patrick Bahr
Maintainer:      Andreas Abel
Homepage:        https://github.com/pa-ba/equivalence
bug-reports:     https://github.com/pa-ba/equivalence/issues
Synopsis:        Maintaining an equivalence relation implemented as union-find using STT.
Description:
  This is an implementation of Tarjan's Union-Find algorithm (Robert
  E. Tarjan. "Efficiency of a Good But Not Linear Set Union
  Algorithm", JACM 22(2), 1975) in order to maintain an equivalence
  relation.

  This implementation is a port of the /union-find/ package using the
  ST monad transformer (instead of the IO monad).
Category:        Algorithms, Data
Stability:       provisional
Build-Type:      Simple

tested-with:
  GHC == 9.14.1
  GHC == 9.12.2
  GHC == 9.10.2
  GHC == 9.8.4
  GHC == 9.6.7
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

Extra-Doc-Files: CHANGES.md

source-repository head
  type:     git
  location: https://github.com/pa-ba/equivalence


Library
  Exposed-Modules:
    Data.Equivalence.STT
    Data.Equivalence.Monad
  Hs-Source-Dirs:       src
  default-language:     Haskell2010
  Build-Depends:
    base                   >= 4.9    && < 5
    -- Lower bounds at least from Stackage LTS 7.0 (GHC 8.0)
    , containers           >= 0.5.7.1
    , mtl                  >= 2.2.1
    , STMonadTrans         >= 0.4.3
    , transformers         >= 0.5.2.0

  ghc-options:
      -Wall
      -Wno-name-shadowing
      -Wno-incomplete-record-updates
      -Wcompat

Test-Suite test
  Type:                 exitcode-stdio-1.0
  Main-is:              Data_Test.hs
  Other-Modules:
    Data.Equivalence.Monad_Test
    Data.Equivalence.Monad
    Data.Equivalence.STT
  hs-source-dirs:       src testsuite/tests
  default-language:     Haskell2010
  Build-Depends:
    equivalence
    -- inherited dependencies from library
    , base
    , containers
    , mtl
    , STMonadTrans
    , transformers
    -- Additional dependencies for testsuite
    -- Lower bounds at least from Stackage LTS 7.0 (GHC 8.0)
    , QuickCheck           >= 2.8.2

  ghc-options:
      -Wall
      -Wno-name-shadowing
      -Wno-incomplete-record-updates
      -Wno-missing-signatures
      -Wno-unused-do-bind
      -Wcompat
